feat(sdx26-finder): add model list | sas

--- a/src/sdx26-finder/index.html
+++ b/src/sdx26-finder/index.html
@@ -1446,15 +1446,192 @@
         </div>
         <ul class="grid gap-fluid-md">
           <li>
-            <article class="bg-base rounded-lg p-fluid-md">
-              <h2 class="prose-heading-md">Article</h2>
-              <p-wordmark></p-wordmark>
+            <article
+              class="bg-base rounded-lg grid grid-cols-[4fr_5fr] items-start"
+            >
+              <div
+                class="rounded-s-lg overflow-hidden grid grid-cols-3 grid-rows-[3fr_1fr] gap-static-xs"
+              >
+                <img
+                  class="aspect-4/3 object-cover col-span-full"
+                  src="/assets/911-rs-1973.webp"
+                  alt=""
+                />
+                <img
+                  class="w-full h-full object-cover"
+                  src="/assets/911-rs-1973-1.webp"
+                  alt=""
+                />
+                <img
+                  class="w-full h-full object-cover"
+                  src="/assets/911-rs-1973-2.webp"
+                  alt=""
+                />
+                <img
+                  class="w-full h-full object-cover"
+                  src="/assets/911-rs-1973-3.webp"
+                  alt=""
+                />
+              </div>
+              <div class="p-fluid-md">
+                <h2 class="prose-heading-lg">
+                  1973 Porsche 911 Carrera RS 2.7
+                </h2>
+                <p>Pre-Owned</p>
+                <p-divider class="my-fluid-sm"></p-divider>
+                <ul class="flex flex-wrap gap-x-static-md">
+                  <li>Grand Prix White</li>
+                  <li>Black</li>
+                </ul>
+                <ul class="flex flex-wrap gap-x-static-md">
+                  <li>Gasoline</li>
+                  <li>65,954 mi</li>
+                  <li>210 hp / 154 kW</li>
+                  <li>Rear-wheel-drive</li>
+                  <li>Manual</li>
+                </ul>
+                <p-divider class="my-fluid-sm"></p-divider>
+                <h3 class="prose-heading-lg">$749,900</h3>
+                <div class="flex flex-wrap gap-static-md my-fluid-sm">
+                  <p-link href="#"> Show details </p-link>
+                  <p-button type="button" variant="secondary" icon="bookmark">
+                    Save
+                  </p-button>
+                </div>
+                <ul class="flex flex-wrap gap-x-static-md">
+                  <li class="font-semibold">Manhattan Motorcars</li>
+                  <li>New York, NY, 10019</li>
+                  <li class="text-contrast-medium">
+                    3 miles away from New York
+                  </li>
+                </ul>
+              </div>
             </article>
           </li>
           <li>
-            <article class="bg-base rounded-lg p-fluid-md">
-              <h2 class="prose-heading-md">Article</h2>
-              <p-wordmark></p-wordmark>
+            <article
+              class="bg-base rounded-lg grid grid-cols-[4fr_5fr] items-start"
+            >
+              <div
+                class="rounded-s-lg overflow-hidden grid grid-cols-3 grid-rows-[3fr_1fr] gap-static-xs"
+              >
+                <img
+                  class="aspect-4/3 object-cover col-span-full"
+                  src="/assets/911-rs-1973.webp"
+                  alt=""
+                />
+                <img
+                  class="w-full h-full object-cover"
+                  src="/assets/911-rs-1973-1.webp"
+                  alt=""
+                />
+                <img
+                  class="w-full h-full object-cover"
+                  src="/assets/911-rs-1973-2.webp"
+                  alt=""
+                />
+                <img
+                  class="w-full h-full object-cover"
+                  src="/assets/911-rs-1973-3.webp"
+                  alt=""
+                />
+              </div>
+              <div class="p-fluid-md">
+                <h2 class="prose-heading-lg">
+                  1973 Porsche 911 Carrera RS 2.7
+                </h2>
+                <p>Pre-Owned</p>
+                <p-divider class="my-fluid-sm"></p-divider>
+                <ul class="flex flex-wrap gap-x-static-md">
+                  <li>Grand Prix White</li>
+                  <li>Black</li>
+                </ul>
+                <ul class="flex flex-wrap gap-x-static-md">
+                  <li>Gasoline</li>
+                  <li>65,954 mi</li>
+                  <li>210 hp / 154 kW</li>
+                  <li>Rear-wheel-drive</li>
+                  <li>Manual</li>
+                </ul>
+                <p-divider class="my-fluid-sm"></p-divider>
+                <h3 class="prose-heading-lg">$749,900</h3>
+                <div class="flex flex-wrap gap-static-md my-fluid-sm">
+                  <p-link href="#"> Show details </p-link>
+                  <p-button type="button" variant="secondary" icon="bookmark">
+                    Save
+                  </p-button>
+                </div>
+                <ul class="flex flex-wrap gap-x-static-md">
+                  <li class="font-semibold">Manhattan Motorcars</li>
+                  <li>New York, NY, 10019</li>
+                  <li class="text-contrast-medium">
+                    3 miles away from New York
+                  </li>
+                </ul>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article
+              class="bg-base rounded-lg grid grid-cols-[4fr_5fr] items-start"
+            >
+              <div
+                class="rounded-s-lg overflow-hidden grid grid-cols-3 grid-rows-[3fr_1fr] gap-static-xs"
+              >
+                <img
+                  class="aspect-4/3 object-cover col-span-full"
+                  src="/assets/911-rs-1973.webp"
+                  alt=""
+                />
+                <img
+                  class="w-full h-full object-cover"
+                  src="/assets/911-rs-1973-1.webp"
+                  alt=""
+                />
+                <img
+                  class="w-full h-full object-cover"
+                  src="/assets/911-rs-1973-2.webp"
+                  alt=""
+                />
+                <img
+                  class="w-full h-full object-cover"
+                  src="/assets/911-rs-1973-3.webp"
+                  alt=""
+                />
+              </div>
+              <div class="p-fluid-md">
+                <h2 class="prose-heading-lg">
+                  1973 Porsche 911 Carrera RS 2.7
+                </h2>
+                <p>Pre-Owned</p>
+                <p-divider class="my-fluid-sm"></p-divider>
+                <ul class="flex flex-wrap gap-x-static-md">
+                  <li>Grand Prix White</li>
+                  <li>Black</li>
+                </ul>
+                <ul class="flex flex-wrap gap-x-static-md">
+                  <li>Gasoline</li>
+                  <li>65,954 mi</li>
+                  <li>210 hp / 154 kW</li>
+                  <li>Rear-wheel-drive</li>
+                  <li>Manual</li>
+                </ul>
+                <p-divider class="my-fluid-sm"></p-divider>
+                <h3 class="prose-heading-lg">$749,900</h3>
+                <div class="flex flex-wrap gap-static-md my-fluid-sm">
+                  <p-link href="#"> Show details </p-link>
+                  <p-button type="button" variant="secondary" icon="bookmark">
+                    Save
+                  </p-button>
+                </div>
+                <ul class="flex flex-wrap gap-x-static-md">
+                  <li class="font-semibold">Manhattan Motorcars</li>
+                  <li>New York, NY, 10019</li>
+                  <li class="text-contrast-medium">
+                    3 miles away from New York
+                  </li>
+                </ul>
+              </div>
             </article>
           </li>
         </ul>
